Newsletter modal button text and layout

--- a/src/_includes/layouts/components/newsletter-form.njk
+++ b/src/_includes/layouts/components/newsletter-form.njk
@@ -12,9 +12,16 @@
     <input type="submit" value="Subscribe" />
   </div>
 
-  <p class="small text-right">
-    <a href="https://buttondown.com/refer/drbslibrary" target="_blank">
-      Powered by Buttondown.
-    </a>
-  </p>
+  <div class="form-group form-group--suffix">
+    <p class="small text-right">
+      <strong>No funny business.</strong><br />
+      Your email address will only ever be used for this newsletter.
+    </p>
+
+    <p class="small text-right">
+      <a href="https://buttondown.com/refer/drbslibrary" target="_blank">
+        Powered by Buttondown.
+      </a>
+    </p>
+  </div>
 </form>
