--- a/src/_includes/layouts/list-library.njk
+++ b/src/_includes/layouts/list-library.njk
@@ -22,7 +22,7 @@ scripts:
       {% include "layouts/components/title-bar.njk" %}
 
       <div class="newsletter-modal-subscribe">
-        <a href="#newsletter-modal" class="open-modal single-meta-button single-meta-button-narrow margin-block-sml" rel="modal:open" data-modal>Subscribe</a>
+        <a href="#newsletter-modal" class="open-modal single-meta-button single-meta-button-narrow margin-block-sml" rel="modal:open" data-modal>Get the newsletter</a>
       </div>
 
     </div>
