--- a/src/_includes/layouts/page-library.njk
+++ b/src/_includes/layouts/page-library.njk
@@ -110,7 +110,7 @@ scripts:
       <span class="metadata__share_item"><a href="https://bsky.app/intent/compose?text={{ encodable | join(' ') | encodeUri }}" class="bluesky" target="_blank" rel="nofollow ugc noopener" title="Share to Bluesky"><span class="visually-hidden">Share to Bluesky</span></a></span>
       {% endif %}
       <span class="metadata__divider divider"></span>
-      <a href="#newsletter-modal" class="open-modal single-meta-button single-meta-button-v-narrow margin-block-sml" rel="modal:open" data-modal>Subscribe</a>
+      <a href="#newsletter-modal" class="open-modal single-meta-button single-meta-button-v-narrow margin-block-sml" rel="modal:open" data-modal>Get the newsletter</a>
     </div>
   </div>
   {% endif %}
